<resources>
    <string name="app_name">Liturgia+</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">v. 2020.1.3 [Numeri]\npadre.cedano@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="la">Laudes</string>
    <string name="lbl_misa_hoy">Misa de hoy</string>
    <string name="lbl_homilias_hoy">Homilías para hoy</string>
    <string name="lbl_comentarios_hoy">Comentarios Evangelio</string>
    <string name="lbl_santo_hoy">Santo del día</string>
    <string name="all_calendar">Calendario</string>
    <string name="title_activity_misa">Misa</string>

    <string name="title_activity_homilias">Homilías</string>
    <string name="title_activity_oficio">Oficio</string>
    <string name="title_activity_laudes">Laudes</string>
    <string name="title_activity_tercia">Tercia</string>
    <string name="title_activity_visperas">Vísperas</string>
    <string name="generic_server_down">El servidor está fuera de servicio. Intenta más tarde.</string>
    <string name="generic_error">Ha ocurrido un error desconocido. Intenta más tarde.</string>
    <string name="title_activity_oraciones">Oraciones</string>
    <string name="leer">Leer</string>
    <string name="title_activity_breviario">Breviario</string>
    <string name="title_activity_calendario">Calendario</string>
    <string name="title_activity_mixto">Oficio+Laudes</string>
    <string name="title_activity_sexta">Sexta</string>
    <string name="title_activity_nona">Nona</string>
    <string name="title_activity_completas">Completas</string>
    <string name="title_activity_breviario_mas">Breviario +</string>
    <string name="title_activity_main_mas">+ ...</string>
    <string name="title_activity_santos">Santos</string>
    <string name="title_activity_lecturas">Lecturas</string>
    <string name="title_activity_comentarios">Comentarios</string>
    <string name="title_activity_menu">info</string>
    <string name="ant"><![CDATA[<font color="#A52A2A">Ant. </font>]]></string>
    <string name="title_activity_rosario">Santo Rosario</string>
    <string name="title_activity_settings">Configuración</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_invitatorio">Múltiples Invitatorios</string>
    <string name="pref_description_invitatorio">Activar para usar el Invitatorio alternando entre los salmos 94, 99, 66 y 23
    </string>
    <string name="pref_title_theme">Tema simple (sin colores) *</string>
    <string name="pref_description_theme">Activar para usar en tema monocolor en la pantalla principal</string>
    <string name="pref_title_bible">Textos de la Biblia de Jerusalén *</string>
    <string name="pref_description_bible">Activar para mostrar los textos bíblicos de la Biblia de Jerusalén</string>
    <string name="pref_title_himno">Himnos de Liturgia Horarum traducidos por F. Arocena *</string>
    <string name="pref_description_himno">Activar para usar los himnos de Liturgia Horarum, traducidos al castellano por Félix Arocena.</string>
    <string name="pref_title_voice">Activar lectura de voz</string>
    <string name="pref_description_voice">Al desactivar esta opción no aparecerá el botón de lectura de voz.</string>

    <!--
        <string name="pref_title_display_name">Display name</string>
        <string name="pref_default_display_name">John Smith</string>
 -->
    <string name="pref_title_font_size">Tamaño de letra por defecto</string>
    <string-array name="pref_font_size_list_titles">
        <item>Pequeño</item>
        <item>Normal</item>
        <item>Mediano</item>
        <item>Grande</item>
        <item>Extra Grande</item>
        <item>Enorme</item>
        <item>Gigante</item>
    </string-array>
    <string-array name="pref_font_size_list_values">
        <item>14</item>
        <item>18</item>
        <item>22</item>
        <item>26</item>
        <item>32</item>
        <item>40</item>
        <item>50</item>
    </string-array>

    <!-- Example settings for Data & Sync
<string name="pref_header_data_sync">Data &amp; sync</string>

<string name="pref_title_sync_frequency">Sync frequency</string>
<string-array name="pref_sync_frequency_titles">
    <item>15 minutes</item>
    <item>30 minutes</item>
    <item>1 hour</item>
    <item>3 hours</item>
    <item>6 hours</item>
    <item>Never</item>
</string-array>
<string-array name="pref_sync_frequency_values">
    <item>15</item>
    <item>30</item>
    <item>60</item>
    <item>180</item>
    <item>360</item>
    <item>-1</item>
</string-array>

<string name="pref_title_system_sync_settings">System sync settings</string>
-->
    <!-- Example settings for Notifications
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
-->
    <string name="title_activity_about">Sobre Liturgia+</string>
    <string name="title_activity_thanks">Agradecimientos</string>
    <string name="title_activity_help">Ayuda</string>
    <string name="title_activity_otras_oraciones">Otras Oraciones</string>
    <string name="title_activity_what_is_new">Novedades</string>
    <string name="title_activity_privacy">Política de Privacidad</string>
    <string name="title_activity_terms">Términos y Condiciones</string>
    <string name="title_activity_author">Autor</string>
    <string name="title_activity_preferences">Preferencias</string>
    <string name="title_activity_biblia">Biblia</string>
    <string name="title_activity_biblia_libros">BibliaLibrosActivity</string>


</resources>
